VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc27Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [24MB/455.1MB][  5%][==>                                               ][8MB/s]  [40MB/455.1MB][  8%][====>                                             ][10MB/s]  [56MB/455.1MB][ 12%][======>                                           ][11.2MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][12MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][12.57MB/s]  [112MB/455.1MB][ 24%][============>                                     ][14MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][14.22MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][14.4MB/s]  [168MB/455.1MB][ 36%][==================>                               ][15.27MB/s]  [176MB/455.1MB][ 38%][===================>                              ][14.67MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][14.77MB/s]  [208MB/455.1MB][ 45%][======================>                           ][14.86MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][14.4MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][14.5MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][14.12MB/s]  [256MB/455.1MB][ 56%][============================>                     ][14.22MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][14.32MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][14MB/s]  [296MB/455.1MB][ 65%][================================>                 ][14.1MB/s]  [312MB/455.1MB][ 68%][==================================>               ][14.18MB/s]  [328MB/455.1MB][ 72%][====================================>             ][14.26MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][14.33MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][14.4MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][14.46MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][14.52MB/s]  [408MB/455.1MB][ 89%][============================================>     ][14.57MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][14.62MB/s]  [448MB/455.1MB][ 98%][=================================================>][14.93MB/s]  [455.1MB/455.1MB][100%][==================================================][15.17MB/s]  [455.1MB/455.1MB][100%][==================================================][15.17MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_121798/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_121798/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
